--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.netbeans.utilities</groupId>
                 <artifactId>nbm-maven-plugin</artifactId>
@@ -288,7 +288,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <verbose>true</verbose>
                 </configuration>
             </plugin>
 
@@ -301,19 +300,54 @@
                     <useDefaultManifestFile>true</useDefaultManifestFile>
                 </configuration>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>verify-style</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <logViolationsToConsole>true</logViolationsToConsole>
+                    <sourceDirectories>src</sourceDirectories>
+                    <checkstyleRules>
+                        <module name="Checker">
+                            <module name="FileTabCharacter"/>
+                            <module name="RegexpSingleline">
+                                <property name="format" value="\s+$"/>
+                                <property name="message" value="Line has trailing spaces."/>
+                            </module>
+                            <module name="RegexpMultiline">
+                                <property name="format" value="\r"/>
+                                <property name="message" value="Contains carriage return \r"/>
+                            </module>
+                            <module name="TreeWalker">
+                                <module name="Indentation"/>
+                            </module>
+                        </module>
+                    </checkstyleRules>
                 </configuration>
             </plugin>
         </plugins>
