--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>eu.doppel-helix.netbeans.plugin</groupId>
     <artifactId>MantisIntegration</artifactId>
-    <version>1.8-SNAPSHOT</version>
+    <version>1.8.1</version>
     <packaging>nbm</packaging>
 
     <name>MantisIntegration</name>
@@ -31,7 +31,7 @@
         <connection>scm:git:https://github.com/matthiasblaesing/netbeans-mantis-integration.git</connection>
         <developerConnection>scm:git:git@github.com:matthiasblaesing/netbeans-mantis-integration.git</developerConnection>
         <url>https://github.com/matthiasblaesing/netbeans-mantis-integration</url>
-        <tag>HEAD</tag>
+        <tag>MantisIntegration-1.8.1</tag>
     </scm>
 
     <properties>
