--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <packaging>nbm</packaging>
 
     <name>MantisIntegration</name>
+    <url>https://github.com/matthiasblaesing/netbeans-mantis-integration</url>
 
     <licenses>
         <license>
